<resources>
    <string name="workout">workout</string>
    <string name="exercise">exercise</string>
    <string name="set">set</string>

    <string name="app_name">Workout tracker</string>
    <string name="edit_workout_activity">Workout</string>
    <string name="edit_exercise_activity">Exercise</string>
    <string name="copy_exercise_activity">Copy exercise</string>

    <string name="add_workout_button">Add workout</string>
    <string name="add_exercise_button">Add exercise</string>
    <string name="add_set_button">Add set</string>

    <string name="delete_workout_button">Delete workout</string>
    <string name="delete_exercise_button">Delete exercise</string>
    <string name="delete_set_button">Delete set</string>

    <string name="no_available">No available %1$s</string>

    <string name="delimiter">:</string>
    <string name="database_unavailable">Database unavailable</string>

    <string name="create_empty">Create empty %1$s</string>
    <string name="copy_previous">Copy previous %1$s</string>

    <string name="select_workout">Select workout</string>
    <string name="select_exercise">Select exercise</string>

    <string name="removed">Removed %1$s</string>

    <string name="undo">Undo</string>

    <string name="date">Date</string>

    <string name="Exercise">Exercise</string>
    <string name="Sets">Sets</string>
    <string name="Top_weight">Top weight</string>

    <string name="Set">Set</string>
    <string name="Weight">Weight</string>
    <string name="Reps">Reps</string>
    <string name="RIR">RIR</string>
    <string name="Rest">Rest</string>
    <string name="Extra">Extra</string>

    <string name="Comment">Comment</string>
    <string name="File">File</string>

    <string name="confirm_exercise">Do you want to select this exercise?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="select_media">Select media</string>
    <string name="play_media">Play media</string>

    <string name="history_page">History</string>
    <string name="exercises_page">Exercises</string>
</resources>