<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="20dp"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.workoutbasic.WorkoutTextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.example.workoutbasic.WorkoutTextView>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/set"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="@dimen/set_weight"
        android:layout_height="wrap_content"
        android:text="@string/Set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/exercise">
    </TextView>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/weight"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="@dimen/weight_weight"
        android:layout_height="wrap_content"
        android:text="@string/Weight"
        app:layout_constraintStart_toEndOf="@id/set"
        app:layout_constraintEnd_toStartOf="@id/reps"
        app:layout_constraintTop_toBottomOf="@id/exercise">
    </TextView>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/reps"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="@dimen/reps_weight"
        android:layout_height="wrap_content"
        android:text="@string/Reps"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintEnd_toStartOf="@id/rir"
        app:layout_constraintTop_toBottomOf="@id/exercise">
    </TextView>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/rir"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="@dimen/rir_weight"
        android:layout_height="wrap_content"
        android:text="@string/RIR"
        app:layout_constraintStart_toEndOf="@id/reps"
        app:layout_constraintEnd_toStartOf="@id/rest"
        app:layout_constraintTop_toBottomOf="@id/exercise">
    </TextView>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/rest"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="@dimen/rest_weight"
        android:layout_height="wrap_content"
        android:text="@string/Rest"
        app:layout_constraintStart_toEndOf="@id/rir"
        app:layout_constraintEnd_toStartOf="@id/extra"
        app:layout_constraintTop_toBottomOf="@id/exercise">
    </TextView>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/extra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="@dimen/extra_weight"
        android:text="@string/Extra"
        app:layout_constraintStart_toEndOf="@id/rest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>